# rag-playground

./: .gitignore  LICENSE  README.md  app.py  langgraph.json  langgraph_client.py  pyproject.toml
notebook/: Adaptive-RAG.ipynb  Agentic-RAG.ipynb  CRAG.ipynb  RAPTOR.ipynb  Self-RAG.ipynb
pages/: page_adaptiverag.py  page_agenticrag.py  page_crag.py  page_home.py  page_raptor.py  page_selfrag.py
src/adaptiverag/: README.md  graph.py  nodes.py  state.py
src/agenticrag/: README.md  graph.py  nodes.py  state.py
src/commonlib/: vectorstore_utils.py
src/crag/: README.md  graph.py  nodes.py  state.py
src/raptor/: README.md  graph.py  nodes.py  raptor.py  state.py
src/selfrag/: README.md  graph.py  nodes.py  state.py
