[project]
name = "rag-playground"
version = "0.1.0"
description = "A playground for exploring and comparing various Retrieval-Augmented Generation (RAG) implementations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "langchain-huggingface>=0.3.0",
    "langchain-tavily>=0.2.3",
    "langgraph>=0.4.8",
    "langgraph-api>=0.2.56",
    "langgraph-cli>=0.3.3",
    "langgraph-sdk>=0.1.70",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.0",
    "tiktoken>=0.9.0",
    "typing>=3.10.0.0",
    "umap-learn>=0.5.7",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["commonlib", "raptor", "crag", "selfrag", "agenticrag"]

[tool.setuptools.package-dir]
"commonlib" = "src/commonlib"
"raptor" = "src/raptor"
"crag" = "src/crag"
"selfrag" = "src/selfrag"
"agenticrag" = "src/agenticrag"
